@@ -1,5 +1,10 @@
 2020-07-26  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/ball/upnp/ssdp/SSDPMessage.java:
+	Added getHeaderParameterValue(String,String) and
+	getHeaderParameterValue(Function<String,T>,String,String)
+	methods.
+
 	* Replaced SSDPMessage class hierarchy with SSDPRequest and
 	SSDPResponse factory methods.
 
